# lib-splittable-terminal

./: meson.build
samples/: ComplexTerminal.vala  SimpleTerminal.vala  meson.build
src/: Paned.vala  Parser.vala  Terminal.vala  TerminalSetting.vala  Workspace.vala
test/: ParserTest.vala  meson.build
