executable ('simple-terminal',
    'SimpleTerminal.vala',
    dependencies: [ splittable_terminal_dependency, splittable_terminal_deps ]
)

executable ('complex-terminal',
    'ComplexTerminal.vala',
    dependencies: [ dependency('granite'), splittable_terminal_dependency, splittable_terminal_deps ]
)